[package]
name = "railbreaker-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
regex = "1.12.3"
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4.43"
sqlx = { version="0.8.6", features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate", "uuid", "chrono"] }
uuid = { version="1.19.0", features = ["v4", "serde"] }
anyhow = "1.0.100"
thiserror = "2.0.18"
phf = { version = "0.11", features = ["macros"] }
